# Simples-Blog-Ninja-API

./: .gitignore  README.md  pyproject.toml
blog/blog/: settings.py  urls.py
blog/category/: models.py
blog/category/migrations/: 0001_initial.py
blog/comments/: admin.py  forms.py  models.py
blog/comments/migrations/: 0001_initial.py  0002_alter_comment_comment_alter_comment_comment_email_and_more.py  0003_alter_comment_comment_published.py
blog/post/: admin.py  models.py  urls.py  views.py
blog/post/migrations/: 0001_initial.py
blog/post/templates/post/: index.html  post_category.html  post_detail.html  post_search.html
blog/post/templatetags/: gifsfilter.py
blog/templates/: base.html
blog/templates/partials/: _footer.html  _head.html  _nav.html
blog/templates/static/js/: details.js
